--- a/rebar.config
+++ b/rebar.config
@@ -2,13 +2,13 @@
 {deps, []}.
 {relx, [
 {release, {sslocal, "1.0.0"},
- [shadowsocks, crypto], [
+ [shadowsocks, crypto, sasl], [
   {sys_config, "config/local.config"},
   {dev_mode, true},
   {include_erts, false},
   {extended_start_script, true}]},
 {release, {ssremote, "1.0.0"},
- [shadowsocks, crypto], [
+ [shadowsocks, crypto, sasl], [
   {sys_config, "config/remote.config"},
   {dev_mode, true},
   {include_erts, false},
